@@ -1,3 +1,8 @@
+2008-03-30    <jeff@mini.nerble.net>
+
+	* cheat.cc, etc: Support higher lifts, up to 255.  Note that the
+	file formats still need to change for this to fully work.
+
 2008-03-21	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* exultmenu.cc: Was missing in previous commit; updated mod manager to use
 	  vectors and classes instead of pointer to vectors and classes.
